--- a/main.css
+++ b/main.css
@@ -78,6 +78,9 @@ body {
 
 main {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .goods-list {
@@ -135,4 +138,13 @@ main {
   font-weight: 600;
   font-size: 20px;
   color: #79716e;
+}
+
+.total-price {
+  font-family: Arial, Helvetica, sans-serif;
+  font-weight: 200;
+  font-size: 20px;
+  padding: 20px;
+  margin: 20px auto;
+  border: 1px solid #d3d3d3;
 }
