--- a/main.css
+++ b/main.css
@@ -1,10 +1,11 @@
 body {
   margin: 0 auto;
   width: 1240px;
+  position: relative;
 }
 .container {
   width: 100%;
-  position: relative;
+  /* position: relative; */
 }
 
 .header {
@@ -161,12 +162,13 @@ main {
   border-radius: 30px;
   padding: 50px 40%;
   box-sizing: border-box;
-  top: 50px;
+  top: 250px;
   width: 100%;
   min-height: 300px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 200;
   font-size: 20px;
+  z-index: 1
 }
 
 .fade-enter-active,
