--- a/main.css
+++ b/main.css
@@ -1,10 +1,11 @@
 body {
   margin: 0 auto;
   width: 1240px;
+  position: relative;
 }
 .container {
   width: 100%;
-  position: relative;
+  /* position: relative; */
 }
 
 .header {
@@ -15,7 +16,6 @@ body {
   justify-content: space-between;
   align-items: flex-start;
   background-color: #eaeaeb;
-  /*   background-image: url(img/header-background.jpg); */
   background-position: bottom right 250px;
   background-repeat: no-repeat;
 }
@@ -111,10 +111,10 @@ main {
 }
 
 .goods-item:hover {
-  filter: brightness(100%);
+  filter: brightness(95%);
 }
 .goods-item:active {
-  filter: brightness(100%);
+  filter: brightness(95%);
 }
 
 .goods-item__wrap {
@@ -157,19 +157,29 @@ main {
 
 .cart {
   position: absolute;
-  display: none;
   background-color: #d9b2de;
   border: 1px solid #d9b2de;
   border-radius: 30px;
   padding: 50px 40%;
   box-sizing: border-box;
-  top: 50px;
+  top: 250px;
   width: 100%;
   min-height: 300px;
   font-family: Arial, Helvetica, sans-serif;
   font-weight: 200;
   font-size: 20px;
+  z-index: 1
 }
+
+.fade-enter-active,
+.fade-leave-active {
+  transition: opacity 0.5s;
+}
+.fade-enter,
+.fade-leave-to {
+  opacity: 0;
+}
+
 .button {
   border: 1px solid rgb(201, 189, 189);
   border-radius: 5px;
